# valheim

./: .editorconfig  .gitignore  .gitmodules  Cargo.toml  README.md  bors.toml
.cargo/: config.toml
.github/workflows/: cargo-check.yml
dts/: valheim.dts.template
profiler/: profile.sh
src/: grammar.lalrpop  main.rs  repl.rs
tests/kernel0/: Makefile  boot.S  kernel.c  platform.h  types.h  uart.c  uart.h
valheim-asm/: Cargo.toml
valheim-asm/src/: lib.rs
valheim-asm/src/asm/: encode16.rs  encode32.rs  mod.rs  riscv.rs  test.rs  traits.rs
valheim-asm/src/isa/: data.rs  decode.rs  decode16.rs  mod.rs  rv32.rs
valheim-asm/src/isa/compressed/: lowering.rs
valheim-cli/: Cargo.toml
valheim-cli/src/: main.rs
valheim-core/: Cargo.toml
valheim-core/src/: grammar.lalrpop  lib.rs
valheim-core/src/asm/: encode.rs  encode32.rs  mod.rs  test.rs
valheim-core/src/cpu/: bus.rs  csr.rs  data.rs  exception.rs  execute.rs  irq.rs  mmu.rs  mod.rs  regs.rs  test.rs  trap.rs
valheim-core/src/debug/: mod.rs  repl.rs  trace.rs
valheim-core/src/device/: clint.rs  mod.rs  ns16550a.rs  plic.rs  virtio.rs
valheim-core/src/dtb/: mod.rs
valheim-core/src/interp/: mod.rs  naive.rs  scratch.rs
valheim-core/src/isa/: data.rs  decode.rs  mod.rs  rv32.rs  rv64.rs  typed.rs  untyped.rs
valheim-core/src/isa/compressed/: desugar.rs  lowering.rs  mod.rs  untyped.rs
valheim-core/src/machine/: mod.rs
valheim-core/src/memory/: mod.rs
valheim-testing/: disabled-tests.txt  enabled-tests.txt  sync-tests.sh
xtask/: Cargo.toml
xtask/src/: main.rs
